[metadata]
name = openwillis
version = 0.2
author = bklynhlth
author_email = admin@bklynhlth.com
description = digital health measurement
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bklynhlth/openwillis
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
